fix[showcase]: spacing between descriptions and images
Closes #33

--- a/showcase/style.css
+++ b/showcase/style.css
@@ -119,7 +119,7 @@ main {
 }
 
 .exercise-card p {
-	margin: -.8em 1em 2em 1em;
+	margin: -.8em 1em 1em;
 }
 
 /* Card hover */
